// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VotesSection > should render correctly at breakpoint md with selectedAddress 1`] = `
<DocumentFragment>
  <div
    class="w-full last:pb-8 mt-4 py-0 pt-0 first:pt-1 md:mt-0"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 md:overflow-hidden md:rounded-xl md:border"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="relative flex items-center overflow-hidden rounded-xl border border-b border-theme-secondary-300 dark:border-theme-secondary-800 md:rounded-none md:border-x-0 md:border-t-0"
            data-testid="VotesSection__search-input"
          >
            <div
              class="pointer-events-none absolute left-0 items-center pl-6"
            >
              <div
                class="text-theme-secondary-500"
              >
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13375_36442)"
                      id="Vertical container"
                    >
                      <g
                        id="Vertical container_2"
                      >
                        <path
                          d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                          id="Vector"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                        <path
                          d="M12.8281 12.7832L14.4281 14.3832"
                          id="Vector_2"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                      </g>
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13375_36442"
                      >
                        <rect
                          fill="transparent"
                          height="16"
                          width="16"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 h-12 overflow-hidden sm:h-14 pl-12"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="Input"
                  placeholder="VOTE.VOTES_PAGE.SEARCH_VALIDATOR_PLACEHOLDER"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <select
              data-testid="VotesFilter"
            >
              <option
                value="all"
              >
                All
              </option>
              <option
                value="current"
              >
                Current
              </option>
            </select>
          </div>
          <div>
            <div>
              Children
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesSection > should render correctly at breakpoint md without selectedAddress 1`] = `
<DocumentFragment>
  <div
    class="w-full last:pb-8 mt-4 py-0 pt-0 first:pt-1 md:mt-0"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 md:overflow-hidden md:rounded-xl md:border"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="relative flex items-center overflow-hidden rounded-xl border border-b border-theme-secondary-300 dark:border-theme-secondary-800 md:rounded-none md:border-x-0 md:border-t-0"
            data-testid="VotesSection__search-input"
          >
            <div
              class="pointer-events-none absolute left-0 items-center pl-6"
            >
              <div
                class="text-theme-secondary-500"
              >
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13375_36442)"
                      id="Vertical container"
                    >
                      <g
                        id="Vertical container_2"
                      >
                        <path
                          d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                          id="Vector"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                        <path
                          d="M12.8281 12.7832L14.4281 14.3832"
                          id="Vector_2"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                      </g>
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13375_36442"
                      >
                        <rect
                          fill="transparent"
                          height="16"
                          width="16"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 h-12 overflow-hidden sm:h-14 pl-12"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="Input"
                  placeholder="VOTE.VOTES_PAGE.SEARCH_WALLET_PLACEHOLDER"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div>
            <div>
              Children
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesSection > should render correctly at breakpoint xs with selectedAddress 1`] = `
<DocumentFragment>
  <div
    class="w-full last:pb-8 mt-4 py-0 pt-0 first:pt-1 md:mt-0"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 md:overflow-hidden md:rounded-xl md:border"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="relative flex items-center overflow-hidden rounded-xl border border-b border-theme-secondary-300 dark:border-theme-secondary-800 md:rounded-none md:border-x-0 md:border-t-0"
            data-testid="VotesSection__search-input"
          >
            <div
              class="pointer-events-none absolute left-0 items-center pl-6"
            >
              <div
                class="text-theme-secondary-500"
              >
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13375_36442)"
                      id="Vertical container"
                    >
                      <g
                        id="Vertical container_2"
                      >
                        <path
                          d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                          id="Vector"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                        <path
                          d="M12.8281 12.7832L14.4281 14.3832"
                          id="Vector_2"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                      </g>
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13375_36442"
                      >
                        <rect
                          fill="transparent"
                          height="16"
                          width="16"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 h-12 overflow-hidden sm:h-14 pl-12"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="Input"
                  placeholder="VOTE.VOTES_PAGE.SEARCH_VALIDATOR_PLACEHOLDER"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <select
              data-testid="VotesFilter"
            >
              <option
                value="all"
              >
                All
              </option>
              <option
                value="current"
              >
                Current
              </option>
            </select>
          </div>
          <div>
            <div>
              Children
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesSection > should render correctly at breakpoint xs without selectedAddress 1`] = `
<DocumentFragment>
  <div
    class="w-full last:pb-8 mt-4 py-0 pt-0 first:pt-1 md:mt-0"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 md:overflow-hidden md:rounded-xl md:border"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="relative flex items-center overflow-hidden rounded-xl border border-b border-theme-secondary-300 dark:border-theme-secondary-800 md:rounded-none md:border-x-0 md:border-t-0"
            data-testid="VotesSection__search-input"
          >
            <div
              class="pointer-events-none absolute left-0 items-center pl-6"
            >
              <div
                class="text-theme-secondary-500"
              >
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13375_36442)"
                      id="Vertical container"
                    >
                      <g
                        id="Vertical container_2"
                      >
                        <path
                          d="M10.5038 13.9035C13.7838 12.5435 15.3038 8.70355 13.9438 5.50355C12.5838 2.22355 8.74379 0.783547 5.54379 2.06355C2.34379 3.34355 0.743788 7.26355 2.10379 10.4635C3.54379 13.7435 7.22379 15.2635 10.5038 13.9035Z"
                          id="Vector"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                        <path
                          d="M12.8281 12.7832L14.4281 14.3832"
                          id="Vector_2"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="1.6"
                        />
                      </g>
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13375_36442"
                      >
                        <rect
                          fill="transparent"
                          height="16"
                          width="16"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 h-12 overflow-hidden sm:h-14 pl-12"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="Input"
                  placeholder="VOTE.VOTES_PAGE.SEARCH_WALLET_PLACEHOLDER"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div>
            <div>
              Children
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
